# captcha_generator

./: .gitignore  Cargo.toml  README.md  captcha_generator.pyi  pyproject.toml
.github/workflows/: build.yml  ci.yml
examples/: generate_captcha.py
src/: captcha.rs  lib.rs
