[project]
name = "captcha-generator"
requires-python = ">=3.9.0"
authors = [{name="vffuunnyy", email="vffuunnyy@gmail.com"}]
dynamic = ["version"]
description = "ðŸš€ Lightweight Captcha Generator for ðŸ Python"
license = "MIT"
readme = "README.md"
keywords = ["captcha", "telegram", "authentication", "auth", "python", "bot", "security", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP"
]

[project.urls]
Homepage = "https://github.com/vffuunnyy/captcha_generator/"
Documentation = "https://github.com/vffuunnyy/captcha_generator/"
Repository = "https://github.com/vffuunnyy/captcha_generator.git"
Issues = "https://github.com/vffuunnyy/captcha_generator/issues"

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"
